- Provide JAXB Bindings for TDML schema as a part of daffodil-tdml-lib - Add items to bindings.xjb to help distinguish between clashing names - Rename Assert in bindings.xjb so that the resulting Java class doesn't clash   with the pre-existing Assert.scala in daffodil-lib